--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -80,7 +80,7 @@
     "style-loader": "0.23.1",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
@@ -94,7 +94,7 @@
     "react-bootstrap": "0.32.4",
     "react-data-grid": "5.0.5",
     "react-data-grid-addons": "5.0.5",
-    "react-dnd": "^7.0.2",
+    "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
     "react-dom": "16.6.0",
     "react-redux": "5.1.0",
